--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,7 +4,8 @@ This software consists of voluntary contributions made by many
 individuals. For exact contribution history, see the revision history
 and logs, available at http://github.com/jquery/jquery-ui
 
-Brandon Aaron
+Nicolas
+Salva
 Paul Bakaus (paulbakaus.com)
 David Bolter
 Rich Caloggero
